Add upgrade guide from 3.5.x to 3.6.x

--- a/guides/layouts/developer/_sidebar.html
+++ b/guides/layouts/developer/_sidebar.html
@@ -127,6 +127,8 @@
           class="toc"></div></li>
           <li><i class="icon-dot"></i><%= link_to "3.4.x to 3.5.x", '/developer/three-dot-four-to-three-dot-five' %> <div
           class="toc"></div></li>
+          <li><i class="icon-dot"></i><%= link_to "3.5.x to 3.6.x", '/developer/three-dot-five-to-three-dot-six' %> <div
+          class="toc"></div></li>
         </ul>
       </li>
     </ul>
