--- a/guides/layouts/release_notes/_sidebar.html
+++ b/guides/layouts/release_notes/_sidebar.html
@@ -7,6 +7,14 @@
           <%= link_to 'Versions', '#' %>
         </h3>
         <ul class="js-guides">
+          <li>
+            <i class="icon-dot"></i>
+            <%= link_to "3.6.0", 'spree_3_6_0' %>
+          </li>
+          <li>
+            <i class="icon-dot"></i>
+            <%= link_to "3.5.0", 'spree_3_5_0' %>
+          </li>
           <li><i class="icon-dot"></i><%= link_to "3.4.0", 'spree_3_4_0' %></li>
           <li><i class="icon-dot"></i><%= link_to "3.3.0", 'spree_3_3_0' %></li>
           <li><i class="icon-dot"></i><%= link_to "3.2.0", 'spree_3_2_0' %></li>
