Rename guest_token to token #8812

--- a/frontend/app/views/spree/checkout/edit.html.erb
+++ b/frontend/app/views/spree/checkout/edit.html.erb
@@ -39,5 +39,5 @@
 
 <script>
   Spree.current_order_id = "<%= @order.number %>"
-  Spree.current_order_token = "<%= @order.guest_token %>"
+  Spree.current_order_token = "<%= @order.token %>"
 </script>
