Fix JS of selected filters in admin's filters

--- a/backend/app/views/spree/admin/products/index.html.erb
+++ b/backend/app/views/spree/admin/products/index.html.erb
@@ -15,13 +15,13 @@
         <div class="col-xs-12 col-md-6">
           <div class="form-group">
             <%= f.label :name_cont, Spree.t(:name) %>
-            <%= f.text_field :name_cont, size: 15, class: "form-control js-quick-search-target" %>
+            <%= f.text_field :name_cont, size: 15, class: "form-control js-quick-search-target js-filterable" %>
           </div>
         </div>
         <div class="col-xs-12 col-md-6">
           <div class="form-group">
             <%= f.label :variants_including_master_sku_cont, Spree.t(:sku) %>
-            <%= f.text_field :variants_including_master_sku_cont, size: 15, class: "form-control" %>
+            <%= f.text_field :variants_including_master_sku_cont, size: 15, class: "form-control js-filterable" %>
           </div>
         </div>
         <div class="col-xs-12 col-md-12">
