--- a/backend/app/views/spree/admin/return_index/customer_returns.html.erb
+++ b/backend/app/views/spree/admin/return_index/customer_returns.html.erb
@@ -9,7 +9,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <%= f.label :number_cont, Spree.t(:number) %>
-            <%= f.text_field :number_cont, class: "form-control js-quick-search-target" %>
+            <%= f.text_field :number_cont, class: "form-control js-quick-search-target js-filterable" %>
           </div>
         </div>
       </div>
