--- a/backend/app/views/spree/admin/properties/index.html.erb
+++ b/backend/app/views/spree/admin/properties/index.html.erb
@@ -16,14 +16,14 @@
         <div class="col-xs-12 col-md-6">
           <div data-hook="admin_property_index_search" class="form-group">
             <%= f.label :name_cont, Spree.t(:name) %>
-            <%= f.text_field :name_cont, class: "form-control js-quick-search-target" %>
+            <%= f.text_field :name_cont, class: "form-control js-quick-search-target js-filterable" %>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-6">
           <div class="form-group">
             <%= f.label :presentation_cont, Spree.t(:presentation) %>
-            <%= f.text_field :presentation_cont, class: "form-control" %>
+            <%= f.text_field :presentation_cont, class: "form-control js-filterable" %>
           </div>
         </div>
       </div>
