--- a/backend/app/views/spree/admin/orders/index.html.erb
+++ b/backend/app/views/spree/admin/orders/index.html.erb
@@ -121,7 +121,7 @@
         <div class="col-xs-12 col-md-4">
           <div class="form-group">
             <%= label_tag :q_channel_eq, Spree.t(:channel) %>
-            <%= f.select :channel_eq, Spree::Order.pluck('DISTINCT channel'), { include_blank: true }, class: 'select2 js-filterable' %>
+            <%= f.select :channel_eq, Spree::Order.distinct.pluck(:channel), { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
 
