--- a/backend/app/views/spree/admin/users/_addresses_form.html.erb
+++ b/backend/app/views/spree/admin/users/_addresses_form.html.erb
@@ -27,7 +27,7 @@
       <div class="panel-body">
           <p class="field checkbox" data-hook="use_billing">
             <%= label_tag :use_billing, id: 'use_billing' do %>
-              <% checked = @user.bill_address.nil? ? false : @user.bill_address.same_as?(@user.ship_address) %>
+              <% checked = @user.bill_address.nil? ? false : @user.bill_address == @user.ship_address %>
               <%= check_box_tag 'user[use_billing]', '1', checked %>
               <%= Spree.t(:use_billing_address) %>
             <% end %>
