--- a/backend/app/views/spree/admin/shared/_order_tabs.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_tabs.html.erb
@@ -17,6 +17,12 @@
       </li>
     <% end %>
 
+    <% if can? :update, @order %>
+      <li<%== ' class="active"' if current == :channel %> data-hook='admin_order_tabs_channel_details'>
+        <%= link_to_with_icon 'record', Spree.t(:channel), channel_admin_order_url(@order) %>
+      </li>
+    <% end %>
+
     <% if can?(:update, @order) && @order.checkout_steps.include?("address") %>
       <li<%== ' class="active"' if current == :customer_details %> data-hook='admin_order_tabs_customer_details'>
         <%= link_to_with_icon 'user', Spree.t(:customer), spree.admin_order_customer_url(@order) %>
