Detach Bootstrap 3 Gem Dependency & Retain Full Usability

--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -1,7 +1,7 @@
 @import 'global/variables';
 
-@import 'bootstrap-sprockets';
-@import 'bootstrap';
+@import 'bootstrap_3-3-7/bootstrap-sprockets';
+@import 'bootstrap_3-3-7/bootstrap';
 
 @import 'components/sidebar';
 @import 'components/tables';
