Update/Remove old bootstrap sass vars.

--- a/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_buttons.scss
@@ -31,7 +31,7 @@
     padding-right: 3px;
   }
 
-  .ship { color: $btn-success-color; }
+  .ship { color: #fff; }
 }
 
 .btn-sm .glyphicon { padding: 0; }
