--- a/backend/app/assets/stylesheets/spree/backend/components/_page_header.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_page_header.scss
@@ -2,7 +2,7 @@
   margin-top: 15px;
 
   h1 {
-    font-size: $font-size-h1 / 1.5;
+    font-size: $h1-font-size / 1.5;
     margin: 0;
     line-height: 38px;
   }
