--- a/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
@@ -2,7 +2,7 @@ table.table {
   thead {
     th {
       text-transform: uppercase;
-      font-size: $font-size-base - 3px;
+      font-size: $font-size-sm;
       padding-top: 14px;
       padding-bottom: 14px;
       vertical-align: middle;
