--- a/guides/content/assets/stylesheets/global/_variables.scss
+++ b/guides/content/assets/stylesheets/global/_variables.scss
@@ -17,7 +17,7 @@ $c-github:      #2C84C7;
 
 // Typography
 $font-size:     16px;
-$line-height:   1.6;
+$line-height-base:   1.6;
 $font-base:     'Open Sans';
 $font-alt:      'Bariol';
 $font-code:     'Inconsolata';
