--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -1,7 +1,7 @@
 @import 'global/variables';
 
-@import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'glyphicons';
 
 @import 'components/sidebar';
 @import 'components/tables';
