--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -1,18 +1,17 @@
 //Add your custom bootstrap variables here, see https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss for full list of variables.
 
-@import "bootstrap-sprockets";
-@import "variables";
+@import "./variables";
 @import "bootstrap";
 
 // -- Spree Custom Header and Footer ---------------------
 #spree-header {
   background-color: $brand-primary;
-  margin-bottom: $line-height-computed;
+  margin-bottom: $line-height-base;
   padding-top: 0.25em;
 
   #header {
-    background: rgba($gray-darker, 0.4);
-    padding: $line-height-computed 0;
+    background: rgba($gray-900, 0.4);
+    padding: $line-height-base 0;
   }
 
   #logo {
@@ -28,7 +27,7 @@
     .navbar-nav > li > a {
       padding-top: 0;
       padding-bottom: 10px;
-      line-height: $line-height-computed;
+      line-height: $line-height-base;
     }
   }
 
@@ -36,7 +35,7 @@
     color: white;
 
     &:hover, &:focus {
-      background: rgba($gray-darker, 0.4);
+      background: rgba($gray-900, 0.4);
     }
   }
 
@@ -47,9 +46,9 @@
 }
 
 #spree-footer {
-  background: $gray-dark;
-  padding-top: $padding-base-horizontal;
-  margin-top: $line-height-computed;
+  background: $gray-700;
+  padding-top: $spacer;
+  margin-top: $line-height-base;
   color: white;
 }
 
@@ -64,7 +63,7 @@
 }
 
 .progress-steps {
-  margin-top: $line-height-computed;
+  margin-top: $line-height-base;
 }
 
 h1 {
