--- a/guides/content/assets/stylesheets/shared/_typography.scss
+++ b/guides/content/assets/stylesheets/shared/_typography.scss
@@ -4,7 +4,7 @@
 
 body {
   font-size: $font-size;
-  line-height: $line-height;
+  line-height: $line-height-base;
   font-family: $font-base;
   -webkit-font-smoothing: antialiased;
 }
