--- a/frontend/app/views/spree/shared/_taxonomies.html.erb
+++ b/frontend/app/views/spree/shared/_taxonomies.html.erb
@@ -4,7 +4,9 @@
   <% @taxonomies.each do |taxonomy| %>
     <% cache [I18n.locale, taxonomy, max_level, @taxon] do %>
       <% if taxonomy.root.children.any? %>
-        <h4 class='taxonomy-root'><%= Spree.t(:shop_by_taxonomy, taxonomy: taxonomy.name) %></h4>
+        <h4 class='taxonomy-root'>
+          <%= Spree.t(:shop_by_taxonomy, taxonomy: taxonomy.name) %>
+        </h4>
         <%= taxons_tree(taxonomy.root, @taxon, max_level) %>
       <% end %>
     <% end %>
