Fix product thumbnails styles

--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -34,7 +34,7 @@
             <%= product_description(@product) %>
           </div>
 
-          <div id="cart-form" data-hook="cart_form">
+          <div id="cart-form" class="mt-4" data-hook="cart_form">
             <%= render partial: 'cart_form' %>
           </div>
         </div>
