Fix product thumbnails styles

--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -80,6 +80,10 @@ table {
   }
 }
 
+#product-thumbnails {
+  list-style: none;
+}
+
 // Updated credit-card image
 #credit-card-image {
   margin-top: -10px;
