--- a/frontend/app/views/spree/shared/_header.html.erb
+++ b/frontend/app/views/spree/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <header id="header" data-hook>
     <div class="container">
       <div class="row">
-        <figure id="logo" class="col-md-4 col-sm-3" data-hook>
+        <figure id="logo" class="col-3 col-md-4" data-hook>
           <%= logo %>
         </figure>
         <%= render partial: 'spree/shared/nav_bar' %>
