--- a/frontend/app/views/spree/shared/_search.html.erb
+++ b/frontend/app/views/spree/shared/_search.html.erb
@@ -1,15 +1,15 @@
 <% @taxons = @taxon && @taxon.parent ? @taxon.parent.children : Spree::Taxon.roots %>
-<%= form_tag spree.products_path, method: :get, class: "navbar-form" do %>
+<%= form_tag spree.products_path, method: :get, class: "form-inline d-flex" do %>
   <div class="form-group">
     <% cache [I18n.locale, @taxons] do %>
       <%= select_tag :taxon,
             options_for_select([[Spree.t(:all_departments), '']] +
                                   @taxons.map {|t| [t.name, t.id]},
-                                  @taxon ? @taxon.id : params[:taxon]), 'aria-label' => 'Taxon', class: "form-control" %>
+                                  @taxon ? @taxon.id : params[:taxon]), 'aria-label' => 'Taxon', class: "form-control mr-2" %>
     <% end %>
   </div>
   <div class="form-group">
-    <%= search_field_tag :keywords, params[:keywords], placeholder: Spree.t(:search), class: "form-control" %>
+    <%= search_field_tag :keywords, params[:keywords], placeholder: Spree.t(:search), class: "form-control mr-2" %>
   </div>
   <%= submit_tag Spree.t(:search), name: nil, class: "btn btn-success" %>
 <% end %>
