--- a/frontend/app/views/spree/products/_properties.html.erb
+++ b/frontend/app/views/spree/products/_properties.html.erb
@@ -1,11 +1,15 @@
-<% unless @product_properties.blank? %>  
+<% unless @product_properties.blank? %>
   <h3 class="product-section-title"><%= Spree.t('properties')%></h3>
   <table id="product-properties" class="table table-striped" data-hook>
     <tbody>
       <% @product_properties.each do |product_property| %>
         <% css_class = cycle('even', 'odd', name: "properties") %>
         <tr class="<%= css_class %>">
-          <td><strong><%= product_property.property.presentation %></strong></td>
+          <td>
+            <strong>
+              <%= product_property.property.presentation %>
+            </strong>
+          </td>
           <td><%= product_property.value %></td>
         </tr>
       <% end %>
