--- a/frontend/app/views/spree/shared/_search.html.erb
+++ b/frontend/app/views/spree/shared/_search.html.erb
@@ -1,5 +1,5 @@
 <% @taxons = @taxon && @taxon.parent ? @taxon.parent.children : Spree::Taxon.roots %>
-<%= form_tag spree.products_path, method: :get, class: "form-inline d-flex" do %>
+<%= form_tag spree.products_path, method: :get, class: "ml-2 form-inline d-flex" do %>
   <div class="form-group">
     <% cache [I18n.locale, @taxons] do %>
       <%= select_tag :taxon,
