Add glyphicons to frontend

--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -2,6 +2,7 @@
 
 @import "./variables";
 @import "bootstrap";
+@import "glyphicons";
 
 // -- Spree Custom Header and Footer ---------------------
 #spree-header {
