Fix primary color to be spree-blue

--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -6,7 +6,7 @@
 
 // -- Spree Custom Header and Footer ---------------------
 #spree-header {
-  background-color: $brand-primary;
+  background-color: $primary;
   margin-bottom: $line-height-base;
   padding-top: 0.25em;
 
