Shopping cart fixes

--- a/frontend/app/views/spree/shared/_order_details.html.erb
+++ b/frontend/app/views/spree/shared/_order_details.html.erb
@@ -75,7 +75,7 @@
     <% end %>
   </tbody>
   <tfoot id="order-total" data-hook="order_details_total">
-    <tr class="warning total">
+    <tr class="table-warning total">
       <td colspan="4" align="right"><b><%= Spree.t(:order_total) %>:</b></td>
       <td class="total"><span id="order_total" class="lead text-primary"><%= order.display_total.to_html %></span></td>
     </tr>
