Rename "panel" classes to "card"

--- a/backend/app/views/spree/admin/adjustments/index.html.erb
+++ b/backend/app/views/spree/admin/adjustments/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <% if @adjustments.present? %>
-  <div class="panel panel-default">
+  <div class="card  ">
     <%= render partial: 'adjustments_table' %>
   </div>
 <% else %>
