--- a/backend/app/views/spree/admin/orders/_adjustments.html.erb
+++ b/backend/app/views/spree/admin/orders/_adjustments.html.erb
@@ -1,7 +1,7 @@
 <% if adjustments.eligible.exists? %>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h1 class="panel-title">
+  <div class="card  ">
+    <div class="card-heading">
+      <h1 class="card-title">
         <%= title %>
       </h1>
     </div>
