--- a/backend/app/views/spree/admin/promotions/rules/_option_value.html.erb
+++ b/backend/app/views/spree/admin/promotions/rules/_option_value.html.erb
@@ -1,4 +1,4 @@
-<div class="panel-body">
+<div class="card-body">
   <div class="promo-rule-option-values">
     <div class="js-promo-rule-option-values"></div>
 
@@ -17,8 +17,8 @@
 </script>
 
 <script type="text/x-handlebars-template" id="promo-rule-option-value-template">
-  <div class="promo-rule-option-value panel panel-default">
-    <div class="panel-heading">
+  <div class="promo-rule-option-value panel  ">
+    <div class="card-heading">
       <a class="js-remove-promo-rule-option-value delete pull-right">
         <span class="icon icon-delete"></span>
       </a>
@@ -30,7 +30,7 @@
       </div>
       <div class="clearfix"></div>
     </div>
-    <div class="panel-body row">
+    <div class="card-body row">
       <div class="col-xs-12 col-md-6">
         <input class="js-promo-rule-option-value-product-select fullwidth" type="hidden" value="{{ productSelect.value }}">
       </div>
