--- a/backend/app/views/spree/admin/shared/_order_summary.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_summary.html.erb
@@ -1,6 +1,6 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= Spree.t(:summary) %></h3>
+<div class="card  ">
+  <div class="card-heading">
+    <h3 class="card-title"><%= Spree.t(:summary) %></h3>
   </div>
 
   <table class="table table-condensed table-bordered" id="order_tab_summary" data-hook>
