--- a/frontend/app/views/spree/checkout/_delivery.html.erb
+++ b/frontend/app/views/spree/checkout/_delivery.html.erb
@@ -1,8 +1,8 @@
-<div class="panel panel-default" id='shipping_method' data-hook>
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= Spree.t(:delivery) %></h3>
+<div class="card  " id='shipping_method' data-hook>
+  <div class="card-heading">
+    <h3 class="card-title"><%= Spree.t(:delivery) %></h3>
   </div>
-  <div class="panel-body" data-hook="shipping_method_inner">
+  <div class="card-body" data-hook="shipping_method_inner">
     <div id="methods">
       <%= form.fields_for :shipments do |ship_form| %>
         <div class="shipment">
