--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -5,8 +5,8 @@
     <div class="col-md-4 col-sm-5" data-hook="product_left_part">
       <div data-hook="product_left_part_wrap">
         <div id="product-images" data-hook="product_images">
-          <div id="main-image" class="panel panel-default" data-hook>
-            <div class="panel-body text-center">
+          <div id="main-image" class="card  " data-hook>
+            <div class="card-body text-center">
               <%= product_image(@product, itemprop: "image") %>
             </div>
           </div>
