--- a/backend/app/views/spree/admin/adjustments/_adjustments_table.html.erb
+++ b/backend/app/views/spree/admin/adjustments/_adjustments_table.html.erb
@@ -1,5 +1,5 @@
-<div class="panel-heading">
-  <h3 class="panel-title"><%= Spree.t(:order_adjustments) %></h3>
+<div class="card-heading">
+  <h3 class="card-title"><%= Spree.t(:order_adjustments) %></h3>
 </div>
 
 <table class="table table-bordered adjustments" data-hook="adjustments">
@@ -18,7 +18,7 @@
 </table>
 
 <% if can?(:edit, Spree::Adjustment) %>
-  <div class="panel-footer">
+  <div class="card-footer">
     <div class="row text-center">
       <div class="col-xs-12 col-md-6">
         <%= button_to Spree.t(:open_all_adjustments), open_adjustments_admin_order_path(@order), method: :get, class: "btn btn-success" %>
