--- a/backend/app/views/spree/admin/orders/_add_line_item.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_line_item.html.erb
@@ -2,11 +2,11 @@
 
 <%= render partial: "spree/admin/variants/autocomplete_line_items_stock", formats: :js %>
 
-<div id="add-line-item" data-hook class="panel panel-default">
-  <div class="panel-heading">
-    <h1 class="panel-title"><%= Spree.t(:add_product) %></h1>
+<div id="add-line-item" data-hook class="card  ">
+  <div class="card-heading">
+    <h1 class="card-title"><%= Spree.t(:add_product) %></h1>
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     <div data-hook="add_product_name" class="form-group">
       <%= label_tag :add_line_item_variant_id, Spree.t(:name_or_sku) %>
       <%= hidden_field_tag :add_line_item_variant_id, "", class: "variant_autocomplete fullwidth-input" %>
