--- a/backend/app/views/spree/admin/orders/_add_product.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_product.html.erb
@@ -1,13 +1,13 @@
 <%= render partial: "spree/admin/variants/autocomplete", formats: :js %>
 <%= render partial: "spree/admin/variants/autocomplete_stock", formats: :js %>
 
-<div class="panel panel-default" id="add-line-item" data-hook>
-  <div class="panel-heading">
-    <h1 class="panel-title">
+<div class="card  " id="add-line-item" data-hook>
+  <div class="card-heading">
+    <h1 class="card-title">
       <%= Spree.t(:add_product) %>
     </h1>
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     <div data-hook="add_product_name">
       <%= label_tag :add_variant_id, Spree.t(:name_or_sku) %>
       <%= hidden_field_tag :add_variant_id, "", class: "variant_autocomplete fullwidth-input" %>
