--- a/backend/app/views/spree/admin/orders/_line_items.html.erb
+++ b/backend/app/views/spree/admin/orders/_line_items.html.erb
@@ -1,7 +1,7 @@
 <% if order.line_items.exists? %>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h1 class="panel-title">
+  <div class="card  ">
+    <div class="card-heading">
+      <h1 class="card-title">
         <%= Spree.t(:order_line_items) %>
       </h1>
     </div>
