--- a/backend/app/views/spree/admin/orders/customer_details/_form.html.erb
+++ b/backend/app/views/spree/admin/orders/customer_details/_form.html.erb
@@ -1,14 +1,14 @@
 <div data-hook="admin_customer_detail_form_fields">
 
-  <div class="panel panel-default" data-hook="customer_guest">
+  <div class="card  " data-hook="customer_guest">
 
-    <div class="panel-heading">
-      <h1 class="panel-title">
+    <div class="card-heading">
+      <h1 class="card-title">
         <%= Spree.t(:account) %>
       </h1>
     </div>
 
-    <div class="panel-body">
+    <div class="card-body">
       <div data-hook="customer_fields" class="row">
         <div class="col-xs-12 col-md-8">
           <div class="form-group">
@@ -56,12 +56,12 @@
 
   <div class="row">
     <div data-hook="bill_address_wrapper" class="col-xs-12 col-md-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h1 class="panel-title"><%= Spree.t(:billing_address) %></h1>
+      <div class="card  ">
+        <div class="card-heading">
+          <h1 class="card-title"><%= Spree.t(:billing_address) %></h1>
         </div>
 
-        <div class="panel-body">
+        <div class="card-body">
           <% if can? :edit, @order.user %>
             <%= f.fields_for :bill_address do |ba_form| %>
               <%= render 'spree/admin/shared/address_form', f: ba_form, type: "billing" %>
@@ -74,11 +74,11 @@
     </div>
 
     <div class="col-xs-12 col-md-6" data-hook="ship_address_wrapper">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h1 class="panel-title"><%= Spree.t(:shipping_address) %></h1>
+      <div class="card  ">
+        <div class="card-heading">
+          <h1 class="card-title"><%= Spree.t(:shipping_address) %></h1>
         </div>
-        <div class="panel-body">
+        <div class="card-body">
           <% if can? :edit, @order.user %>
             <%= f.fields_for :ship_address do |sa_form| %>
               <div class="form-group">
