--- a/backend/app/views/spree/admin/products/stock.html.erb
+++ b/backend/app/views/spree/admin/products/stock.html.erb
@@ -2,12 +2,12 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @product } %>
 
 <% if can? :create, Spree::StockMovement %>
-  <div id="add_stock_form" class="panel panel-default">
+  <div id="add_stock_form" class="card  ">
     <%= render 'add_stock_form' %>
   </div>
 <% end %>
 
-<div class="panel panel-default">
+<div class="card  ">
   <table class="table table-bordered" id="listing_product_stock">
     <thead>
       <tr data-hook="admin_product_stock_management_index_headers">
