--- a/backend/app/views/spree/admin/promotions/_actions.html.erb
+++ b/backend/app/views/spree/admin/promotions/_actions.html.erb
@@ -1,9 +1,9 @@
-<div class="panel-heading">
-  <h1 class="panel-title">
+<div class="card-heading">
+  <h1 class="card-title">
     <%= Spree.t(:promotion_actions) %>
   </h1>
 </div>
-<div id="action_fields" class="panel-body">
+<div id="action_fields" class="card-body">
   <%= form_tag spree.admin_promotion_promotion_actions_path(@promotion), remote: true, id: 'new_promotion_action_form' do %>
     <% options = options_for_select(  Rails.application.config.spree.promotions.actions.map(&:name).map {|name| [ Spree.t("promotion_action_types.#{name.demodulize.underscore}.name"), name] } ) %>
 
