--- a/backend/app/views/spree/admin/promotions/actions/_create_line_items.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_line_items.html.erb
@@ -1,4 +1,4 @@
-<div class="panel-body calculator-fields">
+<div class="card-body calculator-fields">
   <% promotion_action.promotion_action_line_items.each do |item| %>
     <% variant = item.variant %>
 
