--- a/backend/app/views/spree/admin/tax_rates/_form.html.erb
+++ b/backend/app/views/spree/admin/tax_rates/_form.html.erb
@@ -1,12 +1,12 @@
 <div data-hook="admin_tax_rate_form_fields">
-  <div class="panel panel-default" data-hook="tax_rates">
-    <div class="panel-heading">
-      <h1 class="panel-title">
+  <div class="card  " data-hook="tax_rates">
+    <div class="card-heading">
+      <h1 class="card-title">
         <%= Spree.t(:general_settings) %>
       </h1>
     </div>
 
-    <div class="panel-body">
+    <div class="card-body">
       <div class="col-xs-12 col-md-6">
         <div data-hook="name" class="form-group">
           <%= f.label :name, Spree.t(:name) %>
