--- a/backend/app/views/spree/admin/users/_addresses_form.html.erb
+++ b/backend/app/views/spree/admin/users/_addresses_form.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div data-hook="bill_address_wrapper" class="col-xs-12 col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h1 class="panel-title">
+    <div class="card  ">
+      <div class="card-heading">
+        <h1 class="card-title">
           <%= Spree.t(:billing_address) %>
         </h1>
       </div>
 
-      <div class="panel-body">
+      <div class="card-body">
         <%= f.fields_for :bill_address, (@user.bill_address || Spree::Address.default(@user, "bill")) do |ba_form| %>
           <% ba_form.object ||= Spree::Address.new(country: Spree::Country.new) %>
           <%= render partial: 'spree/admin/shared/address_form', locals: { f: ba_form, type: "billing" } %>
@@ -17,14 +17,14 @@
   </div>
 
   <div data-hook="ship_address_wrapper" class="col-xs-12 col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h1 class="panel-title">
+    <div class="card  ">
+      <div class="card-heading">
+        <h1 class="card-title">
           <%= Spree.t(:shipping_address) %>
         </h1>
       </div>
 
-      <div class="panel-body">
+      <div class="card-body">
           <p class="field checkbox" data-hook="use_billing">
             <%= label_tag :use_billing, id: 'use_billing' do %>
               <% checked = @user.bill_address.nil? ? false : @user.bill_address == @user.ship_address %>
