--- a/backend/app/views/spree/admin/users/_lifetime_stats.html.erb
+++ b/backend/app/views/spree/admin/users/_lifetime_stats.html.erb
@@ -1,6 +1,6 @@
-<div data-hook="admin_user_lifetime_stats" class="panel panel-default">
-  <div class="panel-heading">
-    <h1 class="panel-title">
+<div data-hook="admin_user_lifetime_stats" class="card  ">
+  <div class="card-heading">
+    <h1 class="card-title">
       <%= Spree.t(:lifetime_stats) %>
     </h1>
   </div>
