--- a/backend/app/views/spree/admin/zones/_form.html.erb
+++ b/backend/app/views/spree/admin/zones/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12 col-md-6" data-hook="admin_zone_form_fields">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h1 class="panel-title"><%= Spree.t(:general_settings)%></h1>
+    <div class="card  ">
+      <div class="card-heading">
+        <h1 class="card-title"><%= Spree.t(:general_settings)%></h1>
       </div>
 
-      <div class="panel-body">
+      <div class="card-body">
         <%= zone_form.field_container :name, class: ['form-group'] do %>
           <%= zone_form.label :name, Spree.t(:name) %>
           <%= zone_form.text_field :name, class: 'form-control' %>
