--- a/frontend/app/views/spree/checkout/_address.html.erb
+++ b/frontend/app/views/spree/checkout/_address.html.erb
@@ -1,9 +1,11 @@
 <div class="row">
-  <div class="col-6" data-hook="billing_fieldset_wrapper">
+  <div class="col-12 col-md-6" data-hook="billing_fieldset_wrapper">
     <div class="card card-default" id="billing" data-hook>
       <%= form.fields_for :bill_address do |bill_form| %>
         <div class="card-header">
-          <h5 class="mb-0"><%= Spree.t(:billing_address) %></h5>
+          <h5 class="mb-0">
+            <%= Spree.t(:billing_address) %>
+          </h5>
         </div>
         <div class="card-body">
           <%= render partial: 'spree/address/form', locals: { form: bill_form, address_type: 'billing', address: @order.bill_address } %>
@@ -12,11 +14,13 @@
     </div>
   </div>
 
-  <div class="col-6" data-hook="shipping_fieldset_wrapper">
+  <div class="col-12 col-md-6" data-hook="shipping_fieldset_wrapper">
     <div class="card card-default" id="shipping" data-hook>
       <%= form.fields_for :ship_address do |ship_form| %>
         <div class="card-header">
-          <h5 class="mb-0"><%= Spree.t(:shipping_address) %></h5>
+          <h5 class="mb-0">
+            <%= Spree.t(:shipping_address) %>
+          </h5>
         </div>
         <div class="card-body">
           <p class="field checkbox" data-hook="use_billing">
