--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -1,8 +1,8 @@
-<div class="panel panel-default" id="order_details" data-hook>
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= Spree.t(:confirm) %></h3>
+<div class="card  " id="order_details" data-hook>
+  <div class="card-heading">
+    <h3 class="card-title"><%= Spree.t(:confirm) %></h3>
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     <%= render partial: 'spree/shared/order_details', locals: { order: @order } %>
   </div>
 </div>
