--- a/frontend/app/views/spree/checkout/_payment.html.erb
+++ b/frontend/app/views/spree/checkout/_payment.html.erb
@@ -1,8 +1,8 @@
-<div class="panel panel-default" id="payment" data-hook>
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= Spree.t(:payment_information) %></h3>
+<div class="card  " id="payment" data-hook>
+  <div class="card-heading">
+    <h3 class="card-title"><%= Spree.t(:payment_information) %></h3>
   </div>
-  <div class="panel-body" data-hook="checkout_payment_step">
+  <div class="card-body" data-hook="checkout_payment_step">
     <% if @payment_sources.present? %>
       <div class="card_options">
         <%= radio_button_tag 'use_existing_card', 'yes', true %>
