--- a/backend/app/views/spree/admin/general_settings/edit.html.erb
+++ b/backend/app/views/spree/admin/general_settings/edit.html.erb
@@ -14,7 +14,7 @@
           <%#-------------------------------------------------%>
           <% if @preferences_security.any? %>
             <div class="card   security">
-              <div class="card-heading">
+              <div class="card-header">
                 <h1 class="card-title">
                   <%= Spree.t(:security_settings) %>
                 </h1>
@@ -38,7 +38,7 @@
           <%# Clear cache                                     %>
           <%#-------------------------------------------------%>
           <div class="card  ">
-            <div class="card-heading">
+            <div class="card-header">
               <h1 class="card-title"><%= Spree.t(:clear_cache)%></h1>
             </div>
 
@@ -59,7 +59,7 @@
           <%# Currency Settings                               %>
           <%#-------------------------------------------------%>
           <div class="card   currency">
-            <div class="card-heading">
+            <div class="card-header">
               <h1 class="card-title">
                 <%= Spree.t(:currency_settings)%>
               </h1>
