--- a/backend/app/views/spree/admin/orders/_add_line_item.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_line_item.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: "spree/admin/variants/autocomplete_line_items_stock", formats: :js %>
 
 <div id="add-line-item" data-hook class="card  ">
-  <div class="card-heading">
+  <div class="card-header">
     <h1 class="card-title"><%= Spree.t(:add_product) %></h1>
   </div>
   <div class="card-body">
