--- a/backend/app/views/spree/admin/orders/_add_product.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_product.html.erb
@@ -2,7 +2,7 @@
 <%= render partial: "spree/admin/variants/autocomplete_stock", formats: :js %>
 
 <div class="card  " id="add-line-item" data-hook>
-  <div class="card-heading">
+  <div class="card-header">
     <h1 class="card-title">
       <%= Spree.t(:add_product) %>
     </h1>
