--- a/backend/app/views/spree/admin/orders/_adjustments.html.erb
+++ b/backend/app/views/spree/admin/orders/_adjustments.html.erb
@@ -1,6 +1,6 @@
 <% if adjustments.eligible.exists? %>
   <div class="card  ">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= title %>
       </h1>
