--- a/backend/app/views/spree/admin/orders/_shipment.html.erb
+++ b/backend/app/views/spree/admin/orders/_shipment.html.erb
@@ -2,7 +2,7 @@
 
   <%= render partial: "spree/admin/variants/split", formats: :js %>
 
-  <div class="card-heading stock-location no-borderb" data-hook="stock-location">
+  <div class="card-header stock-location no-borderb" data-hook="stock-location">
     <h1 class="card-title">
       <span class="shipment-number"><%= shipment.number %></span>
       -
