--- a/backend/app/views/spree/admin/orders/customer_details/edit.html.erb
+++ b/backend/app/views/spree/admin/orders/customer_details/edit.html.erb
@@ -6,7 +6,7 @@
 
 <% if can? :edit, @order.user %>
   <div id="select-customer" class="card  " data-hook>
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:customer_search) %>
       </h1>
