--- a/backend/app/views/spree/admin/promotions/rules/_option_value.html.erb
+++ b/backend/app/views/spree/admin/promotions/rules/_option_value.html.erb
@@ -18,7 +18,7 @@
 
 <script type="text/x-handlebars-template" id="promo-rule-option-value-template">
   <div class="promo-rule-option-value panel  ">
-    <div class="card-heading">
+    <div class="card-header">
       <a class="js-remove-promo-rule-option-value delete pull-right">
         <span class="icon icon-delete"></span>
       </a>
