--- a/backend/app/views/spree/admin/stock_transfers/new.html.erb
+++ b/backend/app/views/spree/admin/stock_transfers/new.html.erb
@@ -21,7 +21,7 @@
 
 <%= form_tag admin_stock_transfers_path, method: :post do %>
   <div class="card  ">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:transfer_stock) %>
       </h1>
@@ -54,7 +54,7 @@
   </div>
 
   <div class="card  " id="add-variant-to-transfer">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:add_variant) %>
       </h1>
