--- a/backend/app/views/spree/admin/tax_rates/_form.html.erb
+++ b/backend/app/views/spree/admin/tax_rates/_form.html.erb
@@ -1,6 +1,6 @@
 <div data-hook="admin_tax_rate_form_fields">
   <div class="card  " data-hook="tax_rates">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:general_settings) %>
       </h1>
