--- a/backend/app/views/spree/admin/users/_addresses_form.html.erb
+++ b/backend/app/views/spree/admin/users/_addresses_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div data-hook="bill_address_wrapper" class="col-xs-12 col-md-6">
     <div class="card  ">
-      <div class="card-heading">
+      <div class="card-header">
         <h1 class="card-title">
           <%= Spree.t(:billing_address) %>
         </h1>
@@ -18,7 +18,7 @@
 
   <div data-hook="ship_address_wrapper" class="col-xs-12 col-md-6">
     <div class="card  ">
-      <div class="card-heading">
+      <div class="card-header">
         <h1 class="card-title">
           <%= Spree.t(:shipping_address) %>
         </h1>
