--- a/backend/app/views/spree/admin/users/edit.html.erb
+++ b/backend/app/views/spree/admin/users/edit.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <div data-hook="admin_user_edit_general_settings" class="card  ">
-  <div class="card-heading">
+  <div class="card-header">
     <h1 class="card-title">
       <%= Spree.t(:general_settings) %>
     </h1>
@@ -30,7 +30,7 @@
 </div>
 
 <div data-hook="admin_user_api_key" id="admin_user_edit_api_key" class="card  ">
-  <div class="card-heading">
+  <div class="card-header">
     <h1 class="card-title">
       <%= Spree.t('access', scope: 'api') %>
     </h1>
