--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -1,5 +1,5 @@
 <div class="card  " id="order_details" data-hook>
-  <div class="card-heading">
+  <div class="card-header">
     <h3 class="card-title"><%= Spree.t(:confirm) %></h3>
   </div>
   <div class="card-body">
