--- a/frontend/app/views/spree/checkout/_delivery.html.erb
+++ b/frontend/app/views/spree/checkout/_delivery.html.erb
@@ -1,5 +1,5 @@
 <div class="card  " id='shipping_method' data-hook>
-  <div class="card-heading">
+  <div class="card-header">
     <h3 class="card-title"><%= Spree.t(:delivery) %></h3>
   </div>
   <div class="card-body" data-hook="shipping_method_inner">
