--- a/backend/app/views/spree/admin/option_types/edit.html.erb
+++ b/backend/app/views/spree/admin/option_types/edit.html.erb
@@ -13,7 +13,7 @@
 
 <%= form_for [:admin, @option_type] do |f| %>
   <div class="card  ">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:option_values) %>
       </h1>
