--- a/backend/app/views/spree/admin/orders/_line_items.html.erb
+++ b/backend/app/views/spree/admin/orders/_line_items.html.erb
@@ -1,6 +1,6 @@
 <% if order.line_items.exists? %>
   <div class="card  ">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:order_line_items) %>
       </h1>
