--- a/backend/app/views/spree/admin/orders/customer_details/_form.html.erb
+++ b/backend/app/views/spree/admin/orders/customer_details/_form.html.erb
@@ -2,7 +2,7 @@
 
   <div class="card  " data-hook="customer_guest">
 
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:account) %>
       </h1>
@@ -57,7 +57,7 @@
   <div class="row">
     <div data-hook="bill_address_wrapper" class="col-xs-12 col-md-6">
       <div class="card  ">
-        <div class="card-heading">
+        <div class="card-header">
           <h1 class="card-title"><%= Spree.t(:billing_address) %></h1>
         </div>
 
@@ -75,7 +75,7 @@
 
     <div class="col-xs-12 col-md-6" data-hook="ship_address_wrapper">
       <div class="card  ">
-        <div class="card-heading">
+        <div class="card-header">
           <h1 class="card-title"><%= Spree.t(:shipping_address) %></h1>
         </div>
         <div class="card-body">
