--- a/backend/app/views/spree/admin/promotions/_promotion_action.html.erb
+++ b/backend/app/views/spree/admin/promotions/_promotion_action.html.erb
@@ -1,6 +1,6 @@
 <div class="promotion_action promotion-block <%= promotion_action.type.to_s.demodulize.underscore %> panel  " id="<%= dom_id promotion_action %>">
   <% type_name = promotion_action.class.name.demodulize.underscore %>
-  <div class="card-heading">
+  <div class="card-header">
     <%= link_to_with_icon 'delete', '', spree.admin_promotion_promotion_action_path(@promotion, promotion_action), remote: true, method: :delete, class: 'delete pull-right' %>
     <h3 class="card-title promotion-title"><%= Spree.t("promotion_action_types.#{type_name}.description") %></h3>
   </div>
