--- a/backend/app/views/spree/admin/shared/_calculator_fields.html.erb
+++ b/backend/app/views/spree/admin/shared/_calculator_fields.html.erb
@@ -1,6 +1,6 @@
 <div id="calculator_fields" data-hook class="card  ">
 
-  <div class="card-heading">
+  <div class="card-header">
     <h1 class="card-title">
       <%= Spree.t(:calculator) %>
     </h1>
