--- a/backend/app/views/spree/admin/shared/_order_summary.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_summary.html.erb
@@ -1,5 +1,5 @@
 <div class="card  ">
-  <div class="card-heading">
+  <div class="card-header">
     <h3 class="card-title"><%= Spree.t(:summary) %></h3>
   </div>
 
