--- a/backend/app/views/spree/admin/shipping_methods/_form.html.erb
+++ b/backend/app/views/spree/admin/shipping_methods/_form.html.erb
@@ -47,7 +47,7 @@
 <div class="row">
   <div data-hook="admin_shipping_method_form_availability_fields" class="col-xs-12 col-md-6">
     <div class="card   categories">
-      <div class="card-heading">
+      <div class="card-header">
         <h1 class="card-title">
           <%= Spree.t(:shipping_categories) %>
         </h1>
@@ -71,7 +71,7 @@
 
   <div class="col-xs-12 col-md-6">
     <div class="card  ">
-      <div class="card-heading">
+      <div class="card-header">
         <h1 class="card-title">
           <%= Spree.t(:zones) %>
         </h1>
@@ -102,7 +102,7 @@
 
   <div class="col-xs-12 col-md-6">
     <div class="card   tax_categories">
-      <div class="card-heading">
+      <div class="card-header">
         <h1 class="card-title">
           <%= Spree.t(:tax_category) %>
         </h1>
