--- a/backend/app/views/spree/admin/users/_lifetime_stats.html.erb
+++ b/backend/app/views/spree/admin/users/_lifetime_stats.html.erb
@@ -1,5 +1,5 @@
 <div data-hook="admin_user_lifetime_stats" class="card  ">
-  <div class="card-heading">
+  <div class="card-header">
     <h1 class="card-title">
       <%= Spree.t(:lifetime_stats) %>
     </h1>
