--- a/backend/app/views/spree/admin/zones/_country_members.html.erb
+++ b/backend/app/views/spree/admin/zones/_country_members.html.erb
@@ -1,6 +1,6 @@
 <div id="country_members" data-hook="member">
   <div class="card  ">
-    <div class="card-heading">
+    <div class="card-header">
       <h1 class="card-title">
         <%= Spree.t(:countries) %>
       </h1>
