--- a/backend/app/views/spree/admin/zones/_form.html.erb
+++ b/backend/app/views/spree/admin/zones/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12 col-md-6" data-hook="admin_zone_form_fields">
     <div class="card  ">
-      <div class="card-heading">
+      <div class="card-header">
         <h1 class="card-title"><%= Spree.t(:general_settings)%></h1>
       </div>
 
