--- a/frontend/app/views/spree/checkout/_payment.html.erb
+++ b/frontend/app/views/spree/checkout/_payment.html.erb
@@ -1,5 +1,5 @@
 <div class="card  " id="payment" data-hook>
-  <div class="card-heading">
+  <div class="card-header">
     <h3 class="card-title"><%= Spree.t(:payment_information) %></h3>
   </div>
   <div class="card-body" data-hook="checkout_payment_step">
